--- a/themes/hugo-book/layouts/_partials/docs/html-head.html
+++ b/themes/hugo-book/layouts/_partials/docs/html-head.html
@@ -58,3 +58,5 @@ https://github.com/alex-shpak/hugo-book
     integrity="{{ .Data.Integrity }}" crossorigin="anonymous"
   {{- end -}}
 {{- end -}}
+
+<link href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=Noto+Serif+SC&display=swap" rel="stylesheet">
